--- a/MongoMusic.API/MongoMusic.API/MongoMusic.API.csproj
+++ b/MongoMusic.API/MongoMusic.API/MongoMusic.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
